2009-11-12  Ian Beckwith  <ianb@erislabs.net>

	* New elvi:
	  + finkpkg: search Fink packages.
	  + macportspkg: search macports packages.
	* surfraw.IN: w3_parse_args: avoid bogus initial space in w3_args

2009-11-11  Ian Beckwith  <ianb@erislabs.net>

	* New elvi: debpkghome: view home page of a debian package.

2009-11-10  Ian Beckwith  <ianb@erislabs.net>

	* New elvi: acronym, gcache (google cache).
	  Thanks to fittabile@lifegate.it
	* surfraw.IN: only list local elvi if $localelvidir contains
	  files.
	* README: update elvi list and surfraw options.
	* configure.in, HACKING: specify automake 1.11

2009-11-08  Ian Beckwith  <ianb@erislabs.net>

	* New elvi: youtube. Thanks to Sumant Oemrawsingh.

2009-11-07  Ian Beckwith  <ianb@erislabs.net>

	* New elvi, thanks to Sumant Oemrawsingh:
	  + cliki     - search the common lisp wiki.
	  + l1sp      - search lisp documentation.
	  + mathworld - search Wolfram MathWorld.
	  + mininova  - search mininova for torrents.

2009-11-06  Ian Beckwith  <ianb@erislabs.net>

	* examples/uzbl_load_url_from_surfraw:
	  + Applied patch from Sumant Oemrawsingh to strip "GLOBAL ELVI"
	    and "LOCALELVI" and support vertical menus if patched dmenu is
	    available.
	  + present_menu(): use awk(1) instead of cut(1), so tabs in
	    bookmark files are handled correctly.
	  + Add '.IN' suffix and dependency so correct value of @AWK@
	    is picked up from ./configure.
	* Add examples/ to SUBDIRS, move uzbl_load_url_from_surfraw
	  build logic to examples/Makefile.am
	* Fix 'make distcheck':
	  + Install surfraw.bookmarks from $(top_srcdir)
	  + Fix CLEANFILES entries for surfraw-update-path
	    and uzbl_load_url_from_surfraw.

2009-10-27  Ian Beckwith  <ianb@erislabs.net>

	* Added examples/uzbl_load_url_from_surfraw,
	  thanks to Sumant Oemrawsingh.
	* Updated uzbl_load_url_from_surfraw to use new bookmark locations.
	* Fixed debsec (Thanks to Moritz Muehlenhoff, for this
	  and all his other work).
	* Fixed cia.