@@ -57,7 +57,7 @@ elvi.1sr.gz @mandir@/man1/lastfm.1sr.gz
 elvi.1sr.gz @mandir@/man1/leodict.1sr.gz
 elvi.1sr.gz @mandir@/man1/l1sp.1sr.gz
 elvi.1sr.gz @mandir@/man1/lsm.1sr.gz
-elvi.1sr.gz @mandir@/man1/macportspkg.1sr.gz
+elvi.1sr.gz @mandir@/man1/macports.1sr.gz
 elvi.1sr.gz @mandir@/man1/mathworld.1sr.gz
 elvi.1sr.gz @mandir@/man1/mininova.1sr.gz
 elvi.1sr.gz @mandir@/man1/musicbrainz.1sr.gz
