@@ -1,3 +1,3 @@
-macportspkg surfraw
+macports surfraw
 Revolutionary Front Rage Against the Web
 
